# obfeed

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  MANIFEST.in  QUICKSTART.md  README.md  RESTRUCTURE_SUMMARY.md  app.py  docker-compose.yml  feed.py  render.yaml  requirements.txt  server.py  setup.py  temp.txt  test_service.py
examples/: api_client.py  basic_usage.py  config_example.json  websocket_client.py
hft_sim/: CMakeLists.txt
hft_sim/include/: Order.h  OrderBook.h
hft_sim/src/: Order.cpp  OrderBook.cpp  PriceLevel.cpp  bindings.cpp
ob/: CMakeLists.txt  bench.cpp  bench_mt.cpp  bench_prof  bench_prof2  bench_prof3  bench_prof4  gmon.out  main.cpp
ob/build_bench/: CMakeCache.txt  Makefile  bench_mt  cmake_install.cmake  ob_main
ob/include/: OrderBook.h  PriceLevel.h  SimConfig.h  Simulator.h  Trade.h
ob/src/: Order.cpp  OrderBook.cpp  PriceLevel.cpp  Simulator.cpp  bindings.cpp
obfeed/: __init__.py  api.py  cli.py  config.py  engine.py  orderbook.py  server.py
obfeed.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python/: hft.cp311-win_amd64.pyd  v_console.py  v_live.py
